<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etUsernameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/material_dynamic_neutral40"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/enter_email_address"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:textAlignment="gravity"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textColorHint="@color/material_dynamic_neutral40" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/material_dynamic_neutral40"
            app:endIconMode="password_toggle"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/enter_your_password"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:textAlignment="gravity"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textColorHint="@color/material_dynamic_neutral40" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/button_state"
            android:padding="10dp"
            android:text="@string/login"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/don_t_have_an_account"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/signUpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:text="@string/sign_up"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>