<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <ListView
            android:id="@+id/costsListView"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_margin="10dp"
            android:padding="5dp" />

        <TextView
            android:id="@+id/costTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etAddCostLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/material_dynamic_neutral40"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/addIngredientEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/enter_ingredient"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textColorHint="@color/material_dynamic_neutral40" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etAddPriceCostLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/material_dynamic_neutral40"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/priceEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/enter_price"
                android:imeOptions="actionDone"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textColorHint="@color/material_dynamic_neutral40"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/button_state"
            android:padding="10dp"
            android:text="@string/add"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>
